--- a/src/App.scss
+++ b/src/App.scss
@@ -22,5 +22,6 @@ body {
 @import "../src/styles/menu.scss";
 @import "../src/styles/about.scss";
 @import "../src/styles/advantages.scss";
+@import "../src/styles/partners.scss";
 @import "../src/styles/footer.scss";
 
