--- a/src/App.scss
+++ b/src/App.scss
@@ -23,5 +23,6 @@ body {
 @import "../src/styles/about.scss";
 @import "../src/styles/advantages.scss";
 @import "../src/styles/partners.scss";
+@import "../src/styles/contacts.scss";
 @import "../src/styles/footer.scss";
 
