--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,6 +1,6 @@
 .about {
   width: 100%;
-  padding: 50px 0 50px;
+  padding: 50px 0;
   display: flex;
   align-items: center;
   flex-flow: column nowrap;
