no adaptive last block | no popup

--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -4,5 +4,102 @@
   display: flex;
   align-items: center;
   flex-flow: row nowrap;
-  justify-content: center
+  justify-content: center;
+  @media (max-width: 1000px) {
+    flex-flow: column;
+  }
+  &__content {
+    width: 50%;
+    padding: 0 50px;
+    display: flex;
+    flex-flow: column nowrap;
+    text-align: right;
+    @media (max-width: 1000px) {
+      width: 100%;
+      text-align: center;
+      align-items: center;
+      padding: 0 20px;
+    }
+    &:not(:first-child) {
+      border-left: 1px solid #4086ba;
+      @media (max-width: 1000px) {
+        border: none;
+      }
+    }
+    &:first-child {
+      @media (max-width: 1000px) {
+        margin-bottom: 20px;
+      }
+    }
+  }
+  &__address {
+    font-family: "Open Sans", sans-serif;
+    &-big {
+      font-size: 28px;
+      line-height: 30px;
+      font-style: normal;
+      font-weight: 300;
+      color: #4086ba;
+      margin-bottom: 10px;
+    }
+    &-small {
+      font-style: normal;
+      font-weight: 300;
+      font-size: 22px;
+      line-height: 30px;
+      color: #9d9c9c;
+      margin-bottom: 10px;
+      @media (max-width: 1000px) {
+        margin-bottom: 20px;
+      }
+    }
+  }
+  &__box {
+    text-align: right;
+    margin-bottom: 10px;
+  }
+  &__phone {
+    margin-bottom: 5px;
+    font-family: "Open Sans", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    text-align: right;
+    color: #4086ba;
+    @media (max-width: 861px) {
+      font-size: 16px;
+      margin-bottom: 3px;
+    }
+  }
+  &__box a {
+    position: relative;
+    color: #4086ba !important;
+    cursor: pointer;
+    line-height: 1;
+    text-decoration: none;
+    &::after {
+      display: block;
+      position: absolute;
+      left: 0;
+      bottom: -2px;
+      width: 0;
+      height: 1px;
+      background-color: #4086ba;
+      content: "";
+      transition: width 0.3s ease-out;
+    }
+    &:hover:after,
+    :focus::after {
+      width: 100%;
+    }
+  }
+
+  a { 
+    width: 80%;
+    margin-left: 20%;
+    @media (max-width: 1000px) {
+      width: 100%;
+      margin: 0;
+    }
+  }
 }
