--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  padding: 20px 0;
+  padding: 20px 0 50px;
   display: flex;
   justify-content: center;
   align-items: center;
