--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -7,11 +7,20 @@
   justify-content: center;
   @media (max-width: 1000px) {
     flex-flow: column;
+    padding: 0 20px 10px;
+  }
+  button {
+    width: 300px;
+    @media (max-width: 400px) {
+      width: 100%;
+    }
   }
   &__content {
     width: 50%;
     padding: 0 50px;
+    height: 430px;
     display: flex;
+    justify-content: center;
     flex-flow: column nowrap;
     text-align: right;
     @media (max-width: 1000px) {
@@ -19,6 +28,7 @@
       text-align: center;
       align-items: center;
       padding: 0 20px;
+      height: 100%;
     }
     &:not(:first-child) {
       border-left: 1px solid #4086ba;
@@ -41,6 +51,9 @@
       font-weight: 300;
       color: #4086ba;
       margin-bottom: 10px;
+      @media (max-width: 1000px) {
+        font-size: 20px;
+      }
     }
     &-small {
       font-style: normal;
@@ -51,12 +64,13 @@
       margin-bottom: 10px;
       @media (max-width: 1000px) {
         margin-bottom: 20px;
+        font-size: 18px;
       }
     }
   }
   &__box {
     text-align: right;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   }
   &__phone {
     margin-bottom: 5px;
@@ -94,12 +108,20 @@
     }
   }
 
-  a { 
+  a {
     width: 80%;
     margin-left: 20%;
     @media (max-width: 1000px) {
-      width: 100%;
+      width: 290px;
       margin: 0;
     }
+  }
+}
+.map {
+  width: 100%;
+  height: 430px;
+  border-radius: 20px;
+  @media (max-width: 1000px) {
+    width: 500px;
   }
 }
