--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -28,9 +28,9 @@
     }
   }
   &__logo {
-    width: 80px;
-    height: 30px;
-    background: url("../img/logo.webp") center/cover no-repeat;
+    width: 110px;
+    height: 40px;
+    background: url("../img/logo.png") center/cover no-repeat;
     align-self: center;
     &:hover {
       -webkit-animation: swing 0.6s ease;
