--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -142,6 +142,9 @@
     text-transform: uppercase;
     margin: 0 auto;
     border-bottom: 1px solid #4086ba;
+    @media (max-width: 400px) {
+      font-size: 16px;
+    }
     &:before,
     &:after {
       content: "";
