--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -5,13 +5,6 @@
   justify-content: center;
   align-items: center;
   flex-flow: column nowrap;
-  ;
-  &__logo {
-    width: 104px;
-    height: 87px;
-    margin-bottom: 30px;
-    background: url(../img/logo_a.webp) center/cover no-repeat;
-  }
   &__icons {
     display: flex;
     justify-content: space-between;
@@ -22,10 +15,19 @@
       fill: #1463aa;
       transition-duration: 0.3s;
     }
-
     .icon__item svg:hover {
       transform: translateY(-5px);
       cursor: pointer;
     }
+  }
+  p {
+    font-family: "Open Sans", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #9d9c9c;
+    margin-bottom: 10px;
   }
 }
