--- a/src/styles/partners.scss
+++ b/src/styles/partners.scss
@@ -1,18 +1,26 @@
 .partners {
   width: 100%;
+  height: 530px;
   padding: 50px 0;
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-flow: column nowrap;
    @media (max-width: 1000px) {
       padding: 0 0 30px; 
+      height: 620px;
     }
+    @media (max-width: 800px) {
+      padding: 0 0 30px; 
+      height: 1250px;
+    }
+
   &__list {
     display: grid;
     width: 80%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 40px 20px;
-    margin-bottom: 45px;
+    margin: 45px 0;
     @media (max-width: 1000px) {
       grid-template-columns: 1fr 1fr;
     }
@@ -121,14 +129,5 @@
     &:hover {
       background: rgba(255, 255, 255, 0.2);
     }
-  }
-  p {
-    font-family: "Open Sans", sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: center;
-    color: #9d9c9c;
   }
 }
