--- a/src/styles/advantages.scss
+++ b/src/styles/advantages.scss
@@ -1,7 +1,7 @@
 .advantages {
   padding: 30px 60px;
   @media (max-width: 861px) {
-    padding: 0 30px 30px;
+    padding: 30px;
 }
   &__list {
     display: grid;
@@ -22,22 +22,22 @@
       height: 110px;
     }
     .item__icon-1 {
-      background: url("../img/a_1.webp") center/cover no-repeat;
+      background: url("../img/a_1.png") center/cover no-repeat;
     }
     .item__icon-2 {
-      background: url("../img/a_2.webp") center/cover no-repeat;
+      background: url("../img/a_2.png") center/cover no-repeat;
     }
     .item__icon-3 {
-      background: url("../img/a_3.webp") center/cover no-repeat;
+      background: url("../img/a_3.png") center/cover no-repeat;
     }
     .item__icon-4 {
-      background: url("../img/a_4.webp") center/cover no-repeat;
+      background: url("../img/a_4.png") center/cover no-repeat;
     }
     .item__icon-5 {
-      background: url("../img/a_5.webp") center/cover no-repeat;
+      background: url("../img/a_5.png") center/cover no-repeat;
     }
     .item__icon-6 {
-      background: url("../img/a_6.webp") center/cover no-repeat;
+      background: url("../img/a_6.png") center/cover no-repeat;
     }
     .item__title {
       text-align: center;
