--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -8,7 +8,7 @@
   transition: all 0.3s ease-in-out;
   @media (max-width: 861px) {
     flex-direction: column;
-    padding: 10px 0;
+    padding: 10px 0 0;
     width: 100%;
   }
   &__item {
