--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -5,7 +5,7 @@
   align-items: center;
   flex-flow: column nowrap;
   @media (max-width: 890px) {
-    padding: 0 0 30px;
+    padding: 30px 0;
   }
   &__title {
     margin: 0 auto;
@@ -92,17 +92,17 @@
       }
       @media (max-width: 380px) {
         width: 60%;
-        height: 210px;
+        height: 190px;
       }
       &.slider__item-1 {
-        background: url("../img/2.webp") center/cover no-repeat;
+        background: url("../img/2.png") center/cover no-repeat;
       }
       &.slider__item-2 {
-        background: url("../img/1.webp") center/cover no-repeat;
+        background: url("../img/1.png") center/cover no-repeat;
         transform: scale(0.9);
       }
       &.slider__item-3 {
-        background: url("../img/3.webp") center/cover no-repeat;
+        background: url("../img/3.png") center/cover no-repeat;
         @media (max-width: 890px) {
           display: none;
         }
@@ -111,7 +111,7 @@
         }
       }
       &.slider__item-4 {
-        background: url("../img/5.webp") center/cover no-repeat;
+        background: url("../img/5.png") center/cover no-repeat;
         @media (max-width: 890px) {
           display: none;
         }
@@ -120,18 +120,19 @@
         }
       }
       &.slider__item-5 {
-        background: url("../img/4.webp") center/cover no-repeat;
+        background: url("../img/4.png") center/cover no-repeat;
       }
     }
   }
+
   &__button {
     width: 100%;
     height: 70px;
-    text-decoration: none;
+    text-decoration: none !important;
     outline: none;
     display: inline-block;
     position: relative;
-    color: #4086ba;
+    color: #4086ba !important;
     border: 1px solid rgba(255, 255, 255, 0.4);
     background: none;
     padding: 20px 20px;
