--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   @media (max-width: 1000px) {
     flex-flow: column;
-    padding: 0 20px 10px;
+    padding: 30px 20px;
   }
   button {
     width: 300px;
@@ -41,6 +41,7 @@
         margin-bottom: 20px;
       }
     }
+
   }
   &__address {
     font-family: "Open Sans", sans-serif;
