--- a/src/styles/partners.scss
+++ b/src/styles/partners.scss
@@ -7,11 +7,10 @@
   justify-content: center;
   flex-flow: column nowrap;
    @media (max-width: 1000px) {
-      padding: 0 0 30px; 
+      padding: 30px 0; 
       height: 620px;
     }
     @media (max-width: 800px) {
-      padding: 0 0 30px; 
       height: 1250px;
     }
 
