--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -28,6 +28,7 @@
     &::after {
       content: "";
       position: absolute;
+      top: 8px;
       height: 50%;
       width: 1px;
       background-color: #4086ba;
