--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -143,6 +143,7 @@
     text-transform: uppercase;
     margin: 0 auto;
     border-bottom: 1px solid #4086ba;
+    transition: 0.3s;
     @media (max-width: 400px) {
       font-size: 16px;
     }
