--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -126,65 +126,59 @@
   }
 
   &__button {
-    width: 100%;
-    height: 70px;
-    text-decoration: none !important;
+    text-decoration: none;
+    background-color: #ffffff;
     outline: none;
+    color: #4086ba;
     display: inline-block;
     position: relative;
-    color: #4086ba !important;
-    border: 1px solid rgba(255, 255, 255, 0.4);
-    background: none;
-    padding: 20px 20px;
+    padding: 15px 30px;
+    border: 1px solid;
+    border-image: linear-gradient(
+      180deg,
+      rgba(64, 134, 186, 1) 0%,
+      rgba(70, 157, 222, 1) 70%,
+      rgba(81, 172, 240, 1) 100%
+    );
+    border-image-slice: 1;
     font-family: "Open Sans", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
     text-transform: uppercase;
-    margin: 0 auto;
-    border-bottom: 1px solid #4086ba;
-    transition: 0.3s;
-    @media (max-width: 400px) {
+    overflow: hidden;
+    z-index: 5;
+    transition: 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+    margin-bottom: 11px;
+    @media (max-width: 861px) {
       font-size: 16px;
-    }
-    &:before,
-    &:after {
-      content: "";
-      position: absolute;
-      width: 0;
-      height: 0;
-      opacity: 0;
-      box-sizing: border-box;
+      margin: 0;
     }
     &:before {
-      bottom: 0;
+      content: "";
+      position: absolute;
       left: 0;
-      border-left: 1px solid #4086ba;
-      border-top: 1px solid #4086ba;
-      transition: 0s ease opacity 0.8s, 0.2s ease width 0.4s,
-        0.2s ease height 0.6s;
-    }
-    &:after {
       top: 0;
-      right: 0;
-      border-right: 1px solid #4086ba;
-      transition: 0s ease opacity 0.4s, 0.2s ease width, 0.2s ease height 0.2s;
-    }
-    &:hover:before,
-    &:hover:after {
-      height: 100%;
+      height: 0;
       width: 100%;
-      opacity: 1;
-    }
-    &:hover:before {
-      transition: 0s ease opacity 0s, 0.2s ease height, 0.2s ease width 0.2s;
-    }
-    &:hover:after {
-      transition: 0s ease opacity 0.4s, 0.2s ease height 0.4s,
-        0.2s ease width 0.6s;
+      z-index: -1;
+      color: white;
+      background: linear-gradient(
+        180deg,
+        rgba(64, 134, 186, 1) 0%,
+        rgba(70, 157, 222, 1) 70%,
+        rgba(81, 172, 240, 1) 100%
+      );
+      transition: 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
     }
     &:hover {
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0);
+      color: #ffffff;
+    }
+    &:hover:before {
+      bottom: 0%;
+      top: auto;
+      height: 100%;
     }
   }
 }
