--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -28,7 +28,7 @@
     line-height: 20px;
     text-align: center;
     color: #9d9c9c;
-    margin-bottom: 10px;
+    margin: 10px 0;
     @media (max-width: 420px) {
       font-size: 12px;
     }
