--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -1,7 +1,7 @@
 .modal {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   left: 0;
   top: 0;
   display: flex;
